<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/h5_default_titlebar_color"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/upgrade_cur_version_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/cur_ver_is"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/fast_check_tip" />

            <Button
                android:id="@+id/upgrade_fast_check_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:background="@color/h5_default_titlebar_color"
                android:clickable="true"
                android:text="@string/fast_check"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/fast_check_has_tip" />

            <Button
                android:id="@+id/upgrade_fast_check_has_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:background="@color/h5_default_titlebar_color"
                android:clickable="true"
                android:text="@string/fast_check_has"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/fast_check_get_tip" />

            <Button
                android:id="@+id/upgrade_fast_check_get_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:background="@color/h5_default_titlebar_color"
                android:clickable="true"
                android:text="@string/fast_check_get"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/default_interval_upgrade_tip" />

            <Button
                android:id="@+id/upgrade_default_interval_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:background="@color/h5_default_titlebar_color"
                android:clickable="true"
                android:text="@string/default_interval_upgrade"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/custom_interval_upgrade_tip" />

            <Button
                android:id="@+id/upgrade_custom_interval_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:background="@color/h5_default_titlebar_color"
                android:clickable="true"
                android:text="@string/custom_interval_upgrade"
                android:textColor="@android:color/white" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"
                android:text="@string/look_out" />



            <Button
                android:id="@+id/upgrade_custom_dialog"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="20dp"
                android:background="@color/h5_default_titlebar_color"
                android:clickable="true"
                android:text="@string/custom_upgrade_dialog"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>