<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/update_common_dialog_bg"
    android:orientation="vertical" >


        <LinearLayout
            android:id="@+id/update_icon_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/update_icon_iv"
                android:layout_width="93.3dp"
                android:layout_height="93.3dp"
                android:layout_gravity="center"
                android:src="@drawable/update_dialog_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_title_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/update_icon_ll"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/update_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/about_update_find_new_version"
                android:textColor="@color/color_update_333333"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/update_msg_ll"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="12dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/update_msg_scrollview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/update_msg_tv"
                    style="@style/mp_aliupgrade_text_light_gray_20"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4dp"
                    android:layout_marginRight="8dp"
                    android:textColor="@color/color_update_black"
                    android:textSize="13sp" />
            </ScrollView>
        </LinearLayout>
        
        <View
            android:id="@+id/update_line_viewone"
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#dddddd" />
        
        <LinearLayout
            android:id="@+id/update_ll_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:id="@+id/update_cancel_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_weight="1"
                android:padding="5dp"
                android:background="@drawable/update_common_dialog_cancel_btn_bg_selector"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/about_update_next_time_to_choice"
                android:textColor="@color/color_update_108eea"
                android:textSize="16sp" />

            <View
                android:id="@+id/update_line_viewtwo"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_alignTop="@id/update_ll_bottom"
                android:background="#dddddd" />

            <TextView
                android:id="@+id/update_confirm_tv"
                android:layout_width="0dp"
                android:padding="5dp"
                android:minHeight="48dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/update_common_dialog_confirm_btn_bg_selector"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/about_update_now"
                android:textColor="@color/color_update_108eea"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

</LinearLayout>